--- a/src/Otw.WebApp/wwwroot/index.html
+++ b/src/Otw.WebApp/wwwroot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="utf-8" />
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="Otw.WebApp.styles.css" rel="stylesheet" />
+    <script src="js/app.js"></script>
 </head>
 
 <body>
@@ -26,6 +27,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
