--- a/src/Otw.WebApp/wwwroot/index.html
+++ b/src/Otw.WebApp/wwwroot/index.html
@@ -7,6 +7,7 @@
     <title>1000 words</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="icons/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <script src="js/app.js"></script>
